Prevent app heading from shifting when navigating dashboard

--- a/app/styles/_dashboard.scss
+++ b/app/styles/_dashboard.scss
@@ -1,4 +1,5 @@
 #game-dashboard {
+  min-width: 220px;
   margin-bottom: 10px;
   label, button {
     margin: 0 4px;
